# quiz_lab

./: .gitignore  compose.yaml
quiz_app_frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
quiz_app_frontend/src/app/: layout.tsx  page.tsx
quiz_app_frontend/src/app/components/: Hero.tsx  Navbar.tsx  cards.tsx
quiz_app_frontend/src/app/register/: page.tsx
quiz_app_frontend/src/components/: 3d-pin.tsx  Background_deams.tsx  Lable.tsx  form.tsx
quiz_backend/: .env  .gitignore  Dockerfile  pyproject.toml
quiz_backend/quiz_backend/app/routes/: main.py
quiz_backend/quiz_backend/app/routes_functions/: route_functions.py
quiz_backend/quiz_backend/app/routes_functions/admin_route_fuc/: admin_add_category.py  admin_add_chocies.py  admin_add_quiz.py  admin_add_quiz_level.py  admin_auth.py
quiz_backend/quiz_backend/app/routes_functions/users_route_func/: user_get_category.py  user_get_question_level.py  user_get_questions.py
quiz_backend/quiz_backend/controllers/: auth_users_controllers.py
quiz_backend/quiz_backend/db/connections/: create_table.py  engine.py  get_session.py
quiz_backend/quiz_backend/db/models/: quiz_models.py  user_auth_model.py
quiz_backend/quiz_backend/helpers/: decode_token_helper.py  ouath2_helper.py  pwd_hash.py
quiz_backend/quiz_backend/settings/admin_settings/: admin_auth.py
quiz_backend/quiz_backend/settings/database_env/: db_env_settings.py
quiz_backend/quiz_backend/settings/jwt_env_settings/: jwt_env_settings.py
quiz_backend/quiz_backend/settings/tests_db_env_settings/: test_db_settings.py
